--- a/src/assets/styles/admin.css
+++ b/src/assets/styles/admin.css
@@ -64,11 +64,9 @@ html, body, #app, .admin-page {
         padding: 0;
         margin: 0; }
         .middle-content .left-menu .nav-class ul li {
-          height: 35px;
-          line-height: 35px;
           font-size: 12px;
           margin: 0;
-          padding: 0; }
+          padding: 0.8rem 0; }
           .middle-content .left-menu .nav-class ul li i {
             padding-right: 10px; }
           .middle-content .left-menu .nav-class ul li a, .middle-content .left-menu .nav-class ul li a:hover, .middle-content .left-menu .nav-class ul li a:focus, .middle-content .left-menu .nav-class ul li a:visited {
@@ -77,6 +75,11 @@ html, body, #app, .admin-page {
         .middle-content .left-menu .nav-class ul .active {
           font-weight: bold;
           font-size: 16px !important; }
+      .middle-content .left-menu .nav-class .second-level {
+        margin-left: 1.4rem; }
+        .middle-content .left-menu .nav-class .second-level li {
+          margin: 0 !important;
+          padding: 0.5rem 0 0 !important; }
   .middle-content .right-menu {
     width: 100%;
     min-height: 100%;
