--- a/src/assets/styles/admin.scss
+++ b/src/assets/styles/admin.scss
@@ -72,11 +72,9 @@ html, body, #app, .admin-page{
                 padding: 0;
                 margin: 0;
                 li {
-                    height: 35px;
-                    line-height: 35px;
                     font-size: 12px;
                     margin: 0;
-                    padding: 0;
+                    padding: 0.8rem 0;
                     i {
                         padding-right: 10px;
                     }
@@ -88,6 +86,13 @@ html, body, #app, .admin-page{
                 .active {
                     font-weight: bold;
                     font-size: 16px !important;
+                }
+            }
+            .second-level {
+                margin-left: 2.4rem;
+                li {
+                    margin: 0 !important;
+                    padding: 0.5rem 0 0.8rem !important;
                 }
             }
         }
