--- a/src/assets/styles/mobile/index.scss
+++ b/src/assets/styles/mobile/index.scss
@@ -11,6 +11,7 @@ html, body {
     height: 50px;
     padding: 0 25px;
     z-index: 99;
+    background: rgba(0,0,0,0.3);
     box-sizing: border-box;
     .left-nav {
         width: 35%;
