--- a/src/assets/styles/mobile/music.css
+++ b/src/assets/styles/mobile/music.css
@@ -66,20 +66,40 @@
       margin-bottom: 10px; }
       .music-container .music-content-box .nav-box span {
         display: inline-block;
-        background-color: #4f4d51;
         padding: 5px 10px;
         color: #fff;
         font-size: 12px;
         border: 1px solid #7d7c7c; }
       .music-container .music-content-box .nav-box .active {
-        background-color: #000; }
+        background-color: #4f4d51; }
 
 .music-list-box {
+  position: relative;
   width: 100%;
   background: #101010;
   height: 100%;
   padding: 20px 0;
   box-sizing: border-box; }
+  .music-list-box .loading {
+    position: absolute;
+    bottom: -9px;
+    color: #4f4d51;
+    font-size: 12px;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    left: 0;
+    right: 0;
+    margin: 0 auto; }
+    .music-list-box .loading p {
+      margin: 5px 0 0 0;
+      padding: 0; }
+    .music-list-box .loading i {
+      font-size: 20px; }
   .music-list-box .icon {
     color: #e6e6e6;
     font-size: 16px; }
@@ -107,20 +127,25 @@
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.5);
       filter: blur(52px); }
-  .song-content-box .lyric-box ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    margin: 10px;
-    color: #ddd;
-    font-size: 12px;
-    max-height: 178px;
-    overflow: scroll; }
-    .song-content-box .lyric-box ul li {
-      padding: 0;
+  .song-content-box .lyric-box {
+    height: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .song-content-box .lyric-box ul {
+      list-style: none;
       margin: 0;
-      line-height: 16px; }
+      padding: 0;
+      text-align: center;
+      margin: 10px;
+      color: #ddd;
+      font-size: 12px;
+      max-height: 178px;
+      overflow: scroll; }
+      .song-content-box .lyric-box ul li {
+        padding: 0;
+        margin: 0;
+        line-height: 16px; }
   .song-content-box .bottom-box {
     margin: 20px 0; }
     .song-content-box .bottom-box .song-icon-box {
@@ -157,7 +182,9 @@
           top: -3px; }
 
 .music-list {
-  padding: 10px 20px 10px 10px; }
+  margin: 10px 20px 10px 10px;
+  height: 360px;
+  overflow: scroll; }
   .music-list ul {
     padding: 0;
     margin: 0;
@@ -198,5 +225,9 @@
     font-size: 15px;
     color: #eee;
     margin-bottom: 5px; }
+
+.loading-img {
+  width: 32px;
+  height: 32px; }
 
 /*# sourceMappingURL=music.css.map */
