--- a/src/assets/styles/mobile/music.scss
+++ b/src/assets/styles/mobile/music.scss
@@ -72,24 +72,47 @@
       margin-bottom: 10px;
       span {
         display: inline-block;
-        background-color: #4f4d51;
         padding: 5px 10px;
         color: #fff;
         font-size: 12px;
         border: 1px solid #7d7c7c;
       }
       .active {
-        background-color: #000;
+        background-color: #4f4d51;
       }
     }
   }
 }
 .music-list-box {
+  position: relative;
     width: 100%;
     background: #101010;
     height: 100%;
     padding: 20px 0;
     box-sizing: border-box;
+    .loading {
+      position: absolute;
+      bottom: -9px;
+      color: #4f4d51;
+      font-size: 12px;
+      width: 60px;
+      height: 60px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      p {
+        margin: 5px 0 0 0;
+        padding: 0;
+      }
+      i {
+        font-size: 20px;
+      }
+    }
     .icon {
       color: #e6e6e6;
       font-size: 16px;
@@ -121,6 +144,10 @@
       }
     }
     .lyric-box {
+      height: 180px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       ul {
         list-style: none;
         margin: 0;
@@ -181,7 +208,9 @@
     }
   }
 .music-list {
-    padding: 10px 20px 10px 10px;
+    margin: 10px 20px 10px 10px;
+    height: 360px;
+    overflow: scroll;
     ul {
       padding: 0;
       margin: 0;
@@ -229,4 +258,8 @@
         color: #eee;
         margin-bottom: 5px;
     }
+}
+.loading-img {
+  width: 32px;
+  height: 32px;
 }
