--- a/src/assets/styles/mobile/resume.scss
+++ b/src/assets/styles/mobile/resume.scss
@@ -8,6 +8,8 @@
 }
 #app, .resume-page {
   height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 .block-name {
   font-size:  35px;
@@ -21,79 +23,74 @@
   display: -webkit-flex;
   align-items: center;
   width: 100%;
-  height: 100%;
+  // height: 100%;
+  height: 721px;
 }
 .header-container {
   background-image: url('../../images/resume/cover-bg.jpg');
   width: 100%;
-  height: 100%;
+  height: 721px;
+  // height: 100%;
   position: relative;
-  .overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(255, 144, 0, 0.9);
-    .contain-box {
-      width: 60%;
+  
+  .contain-box {
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 130px 0 10px;
+    .head-img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      background-image: url('../../images/resume/head-img.jpg');
+      background-size: cover;
       margin: 0 auto;
-      text-align: center;
-      padding: 130px 0 10px;
-      .head-img {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        background-image: url('../../images/resume/head-img.jpg');
-        background-size: cover;
-        margin: 0 auto;
+    }
+    .header-name-box {
+      font-size: 50px;
+      color: #fff;
+      transform: rotate(-5deg);
+      -webkit-transform: rotate(-5deg);
+      margin: 20px;
+      padding: 0;
+      .name {
+        font-family: 'KaushanScript-Regular';
+        position: relative;
+        padding: 0 30px 0 20px;
       }
-      .header-name-box {
-        font-size: 50px;
-        color: #fff;
-        transform: rotate(-5deg);
-        -webkit-transform: rotate(-5deg);
-        margin: 20px;
-        padding: 0;
-        .name {
-          font-family: 'KaushanScript-Regular';
-          position: relative;
-          padding: 0 30px 0 20px;
-        }
-        .name::before {
-          position: absolute;
-          top: 40px;
-          left: 0;
-          width: 30px;
-          height: 4px;
-          content: '';
-          background: #fff;
-          margin-left: -30px;
-        }
-        .name::after {
-          position: absolute;
-          top: 40px;
-          right: 0;
-          width: 30px;
-          height: 4px;
-          content: '';
-          background: #fff;
-          margin-right: -30px;
-        }
+      .name::before {
+        position: absolute;
+        top: 40px;
+        left: 0;
+        width: 30px;
+        height: 4px;
+        content: '';
+        background: #fff;
+        margin-left: -30px;
       }
-      .motto {
-        font-family: 'Space-Mono-Regular';
-        color: #fff;
-        font-size: 16px;
+      .name::after {
+        position: absolute;
+        top: 40px;
+        right: 0;
+        width: 30px;
+        height: 4px;
+        content: '';
+        background: #fff;
+        margin-right: -30px;
       }
-      .icon-box {
-        margin-top: 25px;
-        img {
-          padding-right: 20px;
-        }
-        a:last-child img {
-          padding-right: 0;
-        }
+    }
+    .motto {
+      font-family: 'Space-Mono-Regular';
+      color: #fff;
+      font-size: 16px;
+    }
+    .icon-box {
+      margin-top: 25px;
+      img {
+        padding-right: 20px;
+      }
+      a:last-child img {
+        padding-right: 0;
       }
     }
   }
@@ -138,6 +135,7 @@
   }
 }
 .person-skill-container {
+  background-image: url('../../images/resume/cover-bg.jpg');
   .skills-box {
     width: 90%;
     margin: 0 auto;
@@ -220,4 +218,33 @@
       }
     }
   }
+}
+.el-carousel__container {
+  position: relative;
+  height: 550px;
+  text-align: center;
+}
+.experience-list {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+.item-box {
+  margin-right: 10px;
+  border: 1px solid #ff9003;
+  padding: 5px;
+}
+.img-box {
+  background-size: cover;
+  width: 240px;
+  height: 427px;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(255, 144, 0, 0.9);
 }
