--- a/src/assets/styles/mobile/resume.css
+++ b/src/assets/styles/mobile/resume.css
@@ -4,7 +4,10 @@
 @font-face {
   font-family: 'Space-Mono-Regular';
   src: url("../../fonts/Space-Mono-Regular.ttf"); }
-#app, .resume-page {
+@font-face {
+  font-family: 'HYBeiWeiXieJingW';
+  src: url("../../fonts/HYBeiWeiXieJingW.ttf"); }
+.adapter-pc .resume-page {
   height: 100%;
   width: 100%;
   overflow: hidden; }
@@ -14,7 +17,8 @@
   margin: 0 0 40px;
   padding: 0;
   text-align: center;
-  width: 100%; }
+  width: 100%;
+  font-family: 'HYBeiWeiXieJingW'; }
 
 .block-box {
   display: flex;
@@ -87,40 +91,45 @@
   width: 80%;
   margin: 0 auto; }
 
-.person-info-container .information-box {
-  width: 30%; }
-  .person-info-container .information-box ul {
-    padding: 0;
-    margin: 0;
-    list-style: none; }
-    .person-info-container .information-box ul li {
+.person-info-container {
+  text-align: left;
+  background-size: cover; }
+  .person-info-container .information-box {
+    width: 30%; }
+    .person-info-container .information-box ul {
       padding: 0;
-      margin: 20px 0; }
-      .person-info-container .information-box ul li .th-name {
-        width: 30%;
-        display: inline-block; }
-      .person-info-container .information-box ul li .content, .person-info-container .information-box ul li .content a {
-        color: rgba(0, 0, 0, 0.5) !important; }
-.person-info-container .introduction-box {
-  width: 60%;
-  color: #4d4d4d;
-  line-height: 20px; }
-  .person-info-container .introduction-box p {
-    margin: 0;
-    padding: 0;
-    line-height: 30px;
-    letter-spacing: 1px; }
+      margin: 0;
+      list-style: none; }
+      .person-info-container .information-box ul li {
+        padding: 0;
+        margin: 20px 0; }
+        .person-info-container .information-box ul li .th-name {
+          width: 30%;
+          display: inline-block;
+          color: #4d4d4d; }
+        .person-info-container .information-box ul li .content, .person-info-container .information-box ul li .content a {
+          color: #3c3b3b !important; }
+  .person-info-container .introduction-box {
+    width: 60%;
+    color: #3c3b3b;
+    line-height: 20px; }
+    .person-info-container .introduction-box p {
+      margin: 0;
+      padding: 0;
+      line-height: 30px;
+      letter-spacing: 1px; }
 
 .person-skill-container {
-  background-image: url("../../images/resume/cover-bg.jpg"); }
+  background-color: #f5f5f5; }
   .person-skill-container .skills-box {
     width: 90%;
     margin: 0 auto;
-    text-align: center; }
+    text-align: center;
+    overflow: hidden; }
     .person-skill-container .skills-box .skill-route {
       position: relative;
-      width: 220px;
-      height: 220px;
+      width: 25%;
+      height: 25%;
       float: left; }
       .person-skill-container .skills-box .skill-route span {
         position: absolute;
@@ -181,6 +190,16 @@
         font-weight: bold;
         color: #b96a05; }
 
+.slide {
+  height: 720px;
+  width: 100%;
+  text-align: center;
+  overflow: hidden; }
+
+.container {
+  width: 100%;
+  height: 100%; }
+
 .el-carousel__container {
   position: relative;
   height: 550px;
@@ -192,15 +211,50 @@
   display: flex;
   justify-content: center; }
 
+@keyframes maskFade {
+  0% {
+    top: 1000px; }
+  100% {
+    top: 0px; } }
+.item-mask {
+  animation: maskFade 0.5s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .item-mask img {
+    width: 120px;
+    height: 120px; }
+
 .item-box {
+  position: relative;
   margin-right: 10px;
-  border: 1px solid #ff9003;
-  padding: 5px; }
+  border: 1px solid #d0d0d0;
+  padding: 10px;
+  border-radius: 10px;
+  -webkit-transition: transform .15s ease-in-out,box-shadow .15s ease-in-out;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02); }
+
+.item-experience {
+  background-color: #f5f5f5; }
+
+.item-box:hover {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.02), 0 16px 32px -4px rgba(0, 0, 0, 0.17);
+  transform: translateY(-1px); }
 
 .img-box {
+  margin: 0 auto;
   background-size: cover;
   width: 240px;
-  height: 427px; }
+  height: 427px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02); }
 
 .overlay {
   position: absolute;
@@ -209,5 +263,189 @@
   left: 0;
   right: 0;
   background: rgba(255, 144, 0, 0.9); }
+
+.overMask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  background: rgba(0, 0, 0, 0.2);
+  justify-content: center; }
+
+.circle-box:hover {
+  animation: quan 1s; }
+
+@keyframes quan {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+.adapter-mobile .header-box {
+  background-image: url("../../images/resume/cover-bg.jpg"); }
+  .adapter-mobile .header-box .mask-cheng {
+    background: rgba(255, 144, 0, 0.9); }
+    .adapter-mobile .header-box .mask-cheng .contain-box {
+      width: 60%;
+      margin: 0 auto;
+      text-align: center;
+      padding: 50px 0 10px; }
+      .adapter-mobile .header-box .mask-cheng .contain-box .head-img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-image: url(/static/image/head-img.8c862eb.jpg);
+        background-size: cover;
+        margin: 0 auto; }
+      .adapter-mobile .header-box .mask-cheng .contain-box .header-name-box, .adapter-mobile .header-box .mask-cheng .contain-box .motto {
+        color: #fff; }
+      .adapter-mobile .header-box .mask-cheng .contain-box .mine-name {
+        font-size: 24px;
+        font-family: 'KaushanScript-Regular';
+        position: relative;
+        padding: 0 30px 0 20px; }
+      .adapter-mobile .header-box .mask-cheng .contain-box .icon-box img {
+        width: 20px;
+        height: 20px; }
+.adapter-mobile .mobile-block {
+  text-align: center;
+  padding-top: 30px;
+  font-size: 14px; }
+  .adapter-mobile .mobile-block .title {
+    color: rgba(255, 144, 0, 0.9);
+    padding: 0 20px 10px;
+    font-size: 22px;
+    font-weight: bold;
+    border-bottom: 2px solid #eee; }
+  .adapter-mobile .mobile-block .introduction-box {
+    width: 80%;
+    margin: 0 auto;
+    color: #3c3b3b;
+    line-height: 20px; }
+    .adapter-mobile .mobile-block .introduction-box p {
+      text-align: left;
+      margin: 0;
+      padding: 0;
+      line-height: 30px;
+      letter-spacing: 1px; }
+  .adapter-mobile .mobile-block .information-box {
+    padding: 10px 0; }
+    .adapter-mobile .mobile-block .information-box ul {
+      padding: 0;
+      margin: 0;
+      list-style: none; }
+      .adapter-mobile .mobile-block .information-box ul li {
+        padding: 0;
+        margin: 20px 0; }
+        .adapter-mobile .mobile-block .information-box ul li .th-name {
+          width: 30%;
+          display: inline-block;
+          color: #4d4d4d;
+          text-align: center; }
+        .adapter-mobile .mobile-block .information-box ul li .content, .adapter-mobile .mobile-block .information-box ul li .content a {
+          color: #3c3b3b !important;
+          width: 30%;
+          text-align: left;
+          display: inline-block; }
+  .adapter-mobile .mobile-block .experience-container {
+    width: 70%;
+    margin: 0 auto;
+    border-left: 2px solid #e6e6e6;
+    padding: 10px 0; }
+    .adapter-mobile .mobile-block .experience-container .content {
+      position: relative; }
+      .adapter-mobile .mobile-block .experience-container .content .router {
+        width: 20px;
+        height: 20px;
+        border-radius: 10px;
+        position: absolute;
+        left: -12px;
+        background: #fff;
+        border: 2px solid #ff9003;
+        box-sizing: border-box; }
+      .adapter-mobile .mobile-block .experience-container .content .time {
+        position: absolute;
+        left: -114px;
+        width: 100px;
+        top: -10px;
+        overflow: hidden;
+        text-align: right;
+        color: #000; }
+        .adapter-mobile .mobile-block .experience-container .content .time p {
+          margin: 0;
+          padding: 0; }
+        .adapter-mobile .mobile-block .experience-container .content .time .year {
+          font-size: 16px;
+          font-weight: bold;
+          margin-bottom: 4px;
+          color: #b96a06; }
+      .adapter-mobile .mobile-block .experience-container .content .text-box {
+        margin: 10px 10px 30px;
+        padding: 5px 10px;
+        color: #4d4d4d; }
+        .adapter-mobile .mobile-block .experience-container .content .text-box p {
+          margin: 0;
+          padding: 0; }
+        .adapter-mobile .mobile-block .experience-container .content .text-box .position {
+          margin: 10px 0;
+          color: #b96a06; }
+        .adapter-mobile .mobile-block .experience-container .content .text-box .company {
+          font-size: 15px;
+          font-weight: bold;
+          color: #b96a05; }
+  .adapter-mobile .mobile-block .skills-container .skill-box {
+    text-align: left;
+    width: 80%;
+    margin: 10px auto; }
+    .adapter-mobile .mobile-block .skills-container .skill-box .skill-name {
+      font-size: 15px;
+      color: #3c3b3b; }
+    .adapter-mobile .mobile-block .skills-container .skill-box .skill-tiao {
+      position: relative;
+      width: 100%;
+      height: 15px;
+      background-color: #e4e4e4;
+      margin: 0 auto;
+      border-radius: 0 10px 10px 0; }
+      .adapter-mobile .mobile-block .skills-container .skill-box .skill-tiao .skill {
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 0 10px 10px 0;
+        background-color: rgba(255, 144, 0, 0.9);
+        height: 15px; }
+        .adapter-mobile .mobile-block .skills-container .skill-box .skill-tiao .skill .num {
+          position: absolute;
+          right: 0;
+          line-height: 15px;
+          color: #fff;
+          left: 0;
+          text-align: center; }
+
+.swiper3 {
+  width: 77%; }
+  .swiper3 .item-box, .swiper3 .img-box {
+    box-shadow: none !important; }
+
+@media screen and (max-width: 960px) {
+  .adapter-pc {
+    display: none; }
+
+  .adapter-mobile {
+    display: block; } }
+@media screen and (min-width: 960px) {
+  #app, .page {
+    height: 100%;
+    width: 100%;
+    overflow: hidden; }
+
+  .adapter-pc {
+    display: block; }
+
+  .adapter-mobile {
+    display: none; } }
 
 /*# sourceMappingURL=resume.css.map */
