--- a/src/assets/styles/mobile/resume.css
+++ b/src/assets/styles/mobile/resume.css
@@ -228,6 +228,7 @@
   border-radius: 10px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center; }
   .item-mask img {
     width: 120px;
@@ -431,6 +432,11 @@
     box-shadow: none !important; }
 
 @media screen and (max-width: 960px) {
+  #app, .page {
+    height: 100%;
+    width: 100%;
+    overflow: scroll; }
+
   .adapter-pc {
     display: none; }
 
