--- a/src/assets/styles/mobile/resume.scss
+++ b/src/assets/styles/mobile/resume.scss
@@ -270,6 +270,7 @@
   border-radius: 10px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   img {
     width: 120px;
@@ -518,6 +519,11 @@
 // pc mobile适配770
 // 当页面小于960px的时候
 @media screen and (max-width: 960px){
+  #app, .page{
+    height: 100%;
+    width: 100%;
+    overflow: scroll;
+  }
   .adapter-pc {
     display: none;
   }
