--- a/src/assets/styles/mobile/resume.scss
+++ b/src/assets/styles/mobile/resume.scss
@@ -28,16 +28,13 @@
   display: -webkit-flex;
   align-items: center;
   width: 100%;
-  // height: 100%;
   height: 721px;
 }
 .header-container {
   background-image: url('../../images/resume/cover-bg.jpg');
   width: 100%;
   height: 721px;
-  // height: 100%;
   position: relative;
-  
   .contain-box {
     width: 60%;
     margin: 0 auto;
@@ -299,6 +296,7 @@
   width: 240px;
   height: 427px;
   box-shadow: 0 1px 3px rgba(0,0,0,.02), 0 4px 8px rgba(0,0,0,.02);
+  z-index: 100;
 }
 .overlay {
   position: absolute;
@@ -345,7 +343,7 @@
           width: 100px;
           height: 100px;
           border-radius: 50%;
-          background-image: url(/static/image/head-img.8c862eb.jpg);
+          background-image: url('../../images/resume/head-img.jpg');
           background-size: cover;
           margin: 0 auto;
         }
