--- a/src/assets/styles/mobile/index.scss
+++ b/src/assets/styles/mobile/index.scss
@@ -103,7 +103,7 @@ html, body {
     }
 }
 .index-content-box {
-  position: absolute;
+  position: absolute !important;
   width: 100%;
   height: auto;
   margin: auto;
