--- a/src/assets/styles/mobile/index.css
+++ b/src/assets/styles/mobile/index.css
@@ -90,7 +90,7 @@ html, body {
       padding: 10px; }
 
 .index-content-box {
-  position: absolute;
+  position: absolute !important;
   width: 100%;
   height: auto;
   margin: auto;
